Implemented check min <= max